# SPH

./: .clang-format  .gitignore  CMakeLists.txt  README.md  calculated_parameters.txt  dominik.txt  karmanVortex.txt  lidDrivenCavity.txt  no_vcpkg.json  parameters.txt  runcmake.sh  vcpkg.json
src/: CMakeLists.txt  main.cpp  parameters.txt  pch.h
src/datastructures/: grid.cpp  grid.h  neighbourhood.cpp  neighbourhood.h  particle.cpp  particle.h  vec.h  vector.h  vector2d.cpp  vector2d.h
src/kernelFunctions/: cubicSpline.cpp  cubicSpline.h  gaussian.cpp  gaussian.h  kernelFunction.cpp  kernelFunction.h
src/output_writer/: body.h  outputwriter.cpp  outputwriter.h  utils.cpp  utils.h  vtk_writer.cpp  vtk_writer.h
src/particle/: particle.h
src/scenario/: scenario.h  scenario_fillingbucket.cpp  scenario_fillingbucket.h  scenario_karmanvortex.cpp  scenario_karmanvortex.h  scenario_liddrivencavity.cpp  scenario_liddrivencavity.h
src/settings/: settings.cpp  settings.h
src/simulation/: simulation.cpp  simulation.h
src/utils/: profiler.h
